# genetic_qt

./: .gitignore  CMakeLists.txt  vcpkg.json
Common/: CMakeLists.txt  defines.h  structs.h
Deap/: Makefile  elitism.py  main.py  requirements.txt
GeneticQt/: CMakeLists.txt  common.proto  geneticqt.cpp  geneticqt.h  main.cpp  rpcclient.cpp  rpcclient.h  rpcclientimpl.cpp  rpcclientimpl.h  rpcserver.cpp  rpcserver.h  rpcserverimpl.cpp  rpcserverimpl.h
Models/: CMakeLists.txt  car.cpp  car.h  game.cpp  game.h  gameimpl.cpp  gameimpl.h  neural.cpp  neural.h  track.cpp  track.h
Views/: CMakeLists.txt  controls.cpp  controls.h  controls.ui  gamefield.cpp  gamefield.h  mainwindow.cpp  mainwindow.h
